skyzen-macros/tests/fixtures/openapi_struct.stderr
error: #[skyzen::openapi] may only be applied to functions
   --> tests/fixtures/openapi_struct.rs:124:1
    |
124 | / struct NotAllowed {
125 | |     value: i32,
126 | | }
    | |_^

warning: unused import: `linkme::distributed_slice`
 --> tests/fixtures/openapi_struct.rs:3:5
  |
3 | use linkme::distributed_slice;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
